# 42go-nextjs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  UPGRADE_NEXT16.md  app.config.js  app.config.mjs  commitlint.config.js  components.json  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  jest.config.js  jest.setup.js  knexfile.js  next.config.ts  package-knex.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.node.json
cli/: pyproject.toml
cli/src/42go_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/src/fortytwogo_cli/: __init__.py  cli.py  peek.py
cli/src/fortytwogo_cli/backup/: __init__.py  cli.py  core.py
cli/src/fortytwogo_cli/email/: __init__.py  cli.py  lingocafe_read_tip.py
cli/src/fortytwogo_cli/events/: __init__.py  books.py  cli.py  dependencies.py  paths.py  pull.py  query.py  reads.py  sessions.py  subscribers.py  users_growth.py
cli/src/fortytwogo_cli/pull/: __init__.py  cli.py
cli/src/fortytwogo_cli/query/: __init__.py  cli.py  lingocafe_growth.py  lingocafe_reads.py  lingocafe_users.py  paths.py  (+2 more)
cli/tests/: test_backup_core.py  test_books_pull.py  test_cli.py  test_email_lingocafe_read_tip.py  test_event_stats.py  test_events_pull.py  test_peek.py  test_query_lingocafe_growth.py  test_query_lingocafe_reads.py  test_query_lingocafe_users.py  test_query_sessions.py  test_query_users.py  test_reads.py  test_sessions.py  test_subscribers.py  test_users_growth.py  test_users_pull.py
(+1870 files in other folders)
