[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "42go-cli"
version = "0.1.0"
description = "Local automation CLI for 42Go projects."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1,<2",
    "psycopg[binary]>=3.2,<4",
    "pyarrow>=16,<22",
    "pytz>=2024",
    "typer[all]>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
42go = "fortytwogo_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
